<resources>
    <string name="app_name">pine</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="Language">Language</string>
    <string name="language_title">Language</string>

    <!--server config-->
    <string name="ServerSettings">Server Setting</string>
    <string name="ServerPath">http://192.168.0.122:8080/pine</string>


    <string name="title">广州视新电子有限公司</string>

    <string name="TitleSetting">TitleSettings</string>




    <!--watch dog -->
    <string name="WatchDogSettings">喂狗设置</string>
    <string name="watchdog_summary_off">关</string>
    <string name="watchdog_summary_on">开</string>
    <string name="watchdog_title">喂狗</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sure">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Exit,Are you sure</string>

</resources>